# iced_gif

./: Cargo.toml
example/: Cargo.toml
src/widget/: gif.rs
