[package]
name = "iced_gif"
version = "0.4.0"
edition = "2021"
authors = ["tarkah <admin@tarkah.dev>"]
description = "A GIF widget for Iced"
license = "MIT"
repository = "https://github.com/tarkah/iced_gif"

[workspace]
default-members = [
  "./example"
]
members = [
  ".",
  "./example",
]

[features]
default = ["async-fs"]
tokio = ["dep:tokio"]

[dependencies]
iced_widget = { version = "*",  features = ["image"] }
iced_futures = "*"
thiserror = "*"

[dependencies.async-fs]
version = "*"
optional = true

[dependencies.tokio]
version = "1"
optional = true
features = ["fs", "io-util"]

[dependencies.image_rs]
package = "image"
version = "*"
features = ["gif"]
